Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ Imports:
     scales,
     tidyverse
 RoxygenNote: 7.0.2
+URL: https://github.com/mglev1n/forestplotR
+BugReports: https://github.com/mglev1n/forestplotR/issues
