--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,10 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     cowplot,
+    dplyr,
+    ggplot2,
+    glue,
+    patchwork,
     purrr,
     rlang,
     scales,
@@ -17,3 +21,8 @@ Imports:
 RoxygenNote: 7.1.2
 URL: https://github.com/mglev1n/forestplotR
 BugReports: https://github.com/mglev1n/forestplotR/issues
+Depends: 
+    R (>= 2.10)
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
